--- a/code.html
+++ b/code.html
@@ -4,11 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/420ba10640.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style.css">
 	<title>Video player</title>
 </head>
-    <body>
-        <div class="conteiner">
+    <body> 
+        <div class="conteiner show-controle">
             <div class="wrapper">
                 <div class="video-timeline">
                     <div class="progress-area">
@@ -17,8 +19,7 @@
                     </div>
                 </div>
                 <ul class="video-controls">
-                    <li class="options left">
-                        <button class="volume"><i class="fa-solid fa-volume"></i></button>
+                    <button class="volume"><i class="fa-solid fa-volume-high"></i></button>
                         <input type="range">
                         <div class="video-timer">
                             <p class="current-time">00:00</p>
@@ -26,21 +27,19 @@
                             <p class="video-duration">00:00</p>
                         </div>
                     </li>
-                    <li class="options center">
-                        <button class="skip-backwards"><i class="fa-solid fa-backward"></i></button>
-                        <button class="play-pause"><i class="fa-solid fa-pause"></i></button>
-                        <button class="skip-forward"><i class="fa-solid fa-forward"></i></button>
-                    </li>
                     <li class="options right">
-                        <button class="play-speed">
-                            <span class="material-symbols-rounded">slow_motion_video</span>
-                        </button>
-                        <button class="pic-in-pic">
-                            <span class="material-icons">picture_in_picture_alt</span>
-                        </button>
-                        <button class="fullscreen">
-                            <span class="fullscreen"><i class="fa-solid fa-expand"></i></span>
-                        </button>
+                        <div class="playback-content"> 
+                            <button class="playback-speed"><span class="material-symbols-rounded">slow_motion_video</span></button>   
+                            <ul class="speed-options"> 
+                                <li data-speed="2">2x</li> 
+                                <li data-speed="1.5">1.5x</li>
+                                <li data-speed="1" class="active">Normal</li> 
+                                <li data-speed="0.75">0.75x</li>
+                                <li data-speed="0.5">0.5x</li>
+                            </ul> 
+                        </div>
+                        <button class="pic-in-pic"><span class="material-icons">picture_in_picture_alt</span></button> 
+                        <button class="fullscreen"><i class="fa-solid fa-expand"></i></button>   
                     </li>
                 </ul>
             </div>
