--- a/code.html
+++ b/code.html
@@ -36,13 +36,13 @@
                 <li class="options right">
                     <div class="playback-content">
                         <button class="playback-speed"><span class="material-symbols-rounded">slow_motion_video</span></button>
-                        <!--<ul class="speed-options">
+                        <ul class="speed-options">
                             <li data-speed="2">2x</li>
                             <li data-speed="1.5">1.5x</li>
                             <li data-speed="1" class="active">Normal</li>
                             <li data-speed="0.75">0.75x</li>
                             <li data-speed="0.5">0.5x</li>
-                        </ul>-->
+                        </ul>
                     </div>
                     <button class="pic-in-pic"><span class="material-icons">picture_in_picture_alt</span></button>    
                     <button class="fullscreen"><i class="fa-solid fa-expand"></i></button>
